finalized for part 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Photo_Editor_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Photo_Editor_project main.cpp)
+add_executable(Photo_Editor_project CS112_A3_Part1_S1,S2_20230470_20230602_20230344.cpp)
